--- a/public/presenter.html
+++ b/public/presenter.html
@@ -39,8 +39,8 @@
 <audio src="" id="finalRecording"></audio>
 </body>
 <!--<script src='SFMediaStream.js'></script>-->
-<script src="serialijse.bundle.min.js"></script>
-<script src="socket.io.js"></script>
-<script src="presenter.js"></script>
+<script src="js/serialijse.bundle.min.js"></script>
+<script src="js/socket.io.js"></script>
+<script src="js/presenter.js"></script>
 
 </html>
